<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/strike_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strike_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="145dp" />

    <TextView
        android:id="@+id/strike_count_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/strike_label"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/strike_label"
        android:layout_toRightOf="@id/strike_label"
        android:text="@string/strike_count_value"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="225dp" />

    <TextView
        android:id="@+id/ball_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/strike_label"
        android:layout_alignEnd="@+id/strike_label"
        android:layout_alignRight="@id/strike_label"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:text="@string/ball_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="225dp" />

    <TextView
        android:id="@+id/ball_count_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ball_label"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/ball_label"
        android:layout_toRightOf="@id/ball_label"
        android:text="@string/ball_count_value"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="145dp" />

    <Button
        android:id="@+id/strike_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ball_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginRight="-2dp"
        android:text="@string/strike_button_label"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="314dp" />

    <Button
        android:id="@+id/ball_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/strike_button"
        android:layout_alignStart="@+id/strike_button"
        android:layout_alignLeft="@id/strike_button"
        android:layout_alignEnd="@+id/strike_button"
        android:layout_alignRight="@id/strike_button"
        android:text="@string/ball_button_label"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="400dp" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ball_button"
        android:layout_alignStart="@id/ball_button"
        android:layout_alignLeft="@id/ball_button"
        android:layout_alignEnd="@id/ball_button"
        android:layout_alignRight="@id/ball_button"
        android:text="@string/reset_button_label"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="500dp" />

    <Button
        android:id="@+id/end_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_button"
        android:layout_alignStart="@id/reset_button"
        android:layout_alignLeft="@id/reset_button"
        android:layout_alignEnd="@id/reset_button"
        android:layout_alignRight="@id/reset_button"
        android:text="@string/end_button_label"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="500dp" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/end_button"
        android:layout_alignStart="@id/end_button"
        android:layout_alignLeft="@id/end_button"
        android:layout_alignEnd="@id/end_button"
        android:layout_alignRight="@id/end_button"
        android:text="@string/about_button_label"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="500dp" />

</RelativeLayout>